crates/dsl-core/tests/snapshots/ast_golden__ast_kyc_case_advance.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "kyc-case",
                verb: "advance",
                arguments: [
                    Argument {
                        key: "case-id",
                        value: SymbolRef {
                            name: "case",
                            span: Span {
                                start: 27,
                                end: 32,
                            },
                        },
                        span: Span {
                            start: 18,
                            end: 32,
                        },
                    },
                    Argument {
                        key: "to-stage",
                        value: Literal(
                            String(
                                "screening",
                            ),
                            Span {
                                start: 43,
                                end: 54,
                            },
                        ),
                        span: Span {
                            start: 33,
                            end: 54,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 55,
                },
            },
        ),
    ],
}
