crates/dsl-core/tests/snapshots/ast_golden__ast_kyc_case_create.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "kyc-case",
                verb: "create",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 25,
                                end: 29,
                            },
                        },
                        span: Span {
                            start: 17,
                            end: 29,
                        },
                    },
                    Argument {
                        key: "case-type",
                        value: Literal(
                            String(
                                "standard",
                            ),
                            Span {
                                start: 41,
                                end: 51,
                            },
                        ),
                        span: Span {
                            start: 30,
                            end: 51,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "case",
                ),
                span: Span {
                    start: 0,
                    end: 62,
                },
            },
        ),
    ],
}
