crates/dsl-core/tests/snapshots/ast_golden__ast_pattern_boolean_arg.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "trading-profile",
                verb: "enable",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 32,
                                end: 36,
                            },
                        },
                        span: Span {
                            start: 24,
                            end: 36,
                        },
                    },
                    Argument {
                        key: "instrument",
                        value: Literal(
                            String(
                                "bond",
                            ),
                            Span {
                                start: 49,
                                end: 55,
                            },
                        ),
                        span: Span {
                            start: 37,
                            end: 55,
                        },
                    },
                    Argument {
                        key: "enabled",
                        value: Literal(
                            Boolean(
                                false,
                            ),
                            Span {
                                start: 65,
                                end: 70,
                            },
                        ),
                        span: Span {
                            start: 56,
                            end: 70,
                        },
                    },
                    Argument {
                        key: "override",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 81,
                                end: 85,
                            },
                        ),
                        span: Span {
                            start: 71,
                            end: 85,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 86,
                },
            },
        ),
    ],
}
